user/logs/stride-200809_100904.log
TTLocalizer: Running in language: English
OTPLocalizer: Running in language: English
Preloading suits...
Preloading Toon heads...
Preloading avatars...
Traceback (most recent call last):
  File "C:\Panda3D-1.10.0\python\lib\runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "C:\Panda3D-1.10.0\python\lib\runpy.py", line 72, in _run_code
    exec code in run_globals
  File "C:\Users\Cool Cat\Documents\GitHub\Toontown-Old-Online\toontown\toonbase\ToontownStart.py", line 190, in <module>
    cr = ToontownClientRepository.ToontownClientRepository(serverVersion)
  File "toontown\distributed\ToontownClientRepository.py", line 62, in __init__
    OTPClientRepository.OTPClientRepository.__init__(self, serverVersion, playGame=PlayGame.PlayGame)
  File "otp\distributed\OTPClientRepository.py", line 28, in __init__
    ClientRepositoryBase.__init__(self)
  File "C:\Panda3D-1.10.0\direct\distributed\ClientRepositoryBase.py", line 49, in __init__
    self.readDCFile(dcFileNames)
  File "otp\distributed\OTPClientRepository.py", line 274, in readDCFile
    self.importModule(dcImports, moduleName, importSymbols)
  File "C:\Panda3D-1.10.0\direct\distributed\ConnectionRepository.py", line 408, in importModule
    module = __import__(moduleName, globals(), locals(), importSymbols)
  File "toontown\suit\DistributedSuit.py", line 22, in <module>
    from toontown.battle import DistributedBattle
  File "toontown\battle\DistributedBattle.py", line 7, in <module>
    import DistributedBattleBase
  File "toontown\battle\DistributedBattleBase.py", line 12, in <module>
    import Movie
  File "toontown\battle\Movie.py", line 19, in <module>
    import MovieSuitAttacks
  File "toontown\battle\MovieSuitAttacks.py", line 2168
    return Parallel(suitTrack, toonTrack, soundTrack, cloudPropTrack)
         ^
SyntaxError: invalid syntax
